# opencvIntro

./: README.md
step1/: main.cpp
step2/: CMakeLists.txt  main.cpp
step3/: CMakeLists.txt  main.cpp
step4/: CMakeLists.txt  main.cpp
step5/: CMakeLists.txt  README.md  main.cpp
step6/: CMakeLists.txt  README.md  main.cpp
